private class fix